[gd_scene load_steps=3 format=3 uid="uid://cohtlh5xw77ry"]

[ext_resource type="Script" path="res://ShadowMonarch.gd" id="1"]

[sub_resource type="RectangleShape2D" id="ShadowMonarchCollisionShape"]
size = Vector2(40, 80)

[node name="ShadowMonarch" type="Area2D"]
script = ExtResource("1")

[node name="ShadowCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("ShadowMonarchCollisionShape")

[node name="ShadowSprite" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="DarkAura" type="PointLight2D" parent="."]
position = Vector2(0, -40)
color = Color(0.2, 0.1, 0.2, 1)
energy = 0.5
texture_scale = 3.0

[node name="NameLabel" type="Label" parent="."]
modulate = Color(0.8, 0.2, 0.2, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -80.0
text = "Shadow Monarch"
horizontal_alignment = 1
